nginx-k8s-config/config/nginx/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: default
  labels:
    app: nginx
    service: nginx
spec:
  selector:
    app: nginx
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    port: 80
    protocol: TCP
