nginx-k8s-config/config/nginx/templates/httproutes.yaml
apiVersion: v1
kind: List
metadata:
  resourceVersion: ""
items:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: nginx
    namespace: default
  spec:
    hostnames:
    - www.watt.es
    parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gw-edge-proxy
      namespace: envoy-gateway-system
    rules:
    - backendRefs:
      - group: ""
        kind: Service
        name: nginx
        port: 80
        weight: 1
      matches:
      - path:
          type: PathPrefix
          value: /nginx
